<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Broadleaf Commerce Confidential
  ~ _______________________________
  ~
  ~ [2009] - [2013] Broadleaf Commerce, LLC
  ~ All Rights Reserved.
  ~
  ~ NOTICE:  All information contained herein is, and remains
  ~ the property of Broadleaf Commerce, LLC
  ~ The intellectual and technical concepts contained
  ~ herein are proprietary to Broadleaf Commerce, LLC
  ~ and may be covered by U.S. and Foreign Patents,
  ~ patents in process, and are protected by trade secret or copyright law.
  ~ Dissemination of this information or reproduction of this material
  ~ is strictly forbidden unless prior written permission is obtained
  ~ from Broadleaf Commerce, LLC.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.broadleafcommerce</groupId>
    <artifactId>broadleaf-punchout2go</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>BroadleafCommerce Punchout2Go</name>
    <description>BroadleafCommerce Punchout2Go</description>
    <url>http://www.broadleafcommerce.com</url>
    <developers>
        <developer>
            <id>jsebastian</id>
            <name>John Sebastian</name>
            <email>jsebastian@broadleafcommerce.org</email>
            <organization>Broadleaf Commerce</organization>
            <organizationUrl>http://www.broadleafcommerce.org</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>-6</timezone>
        </developer>
    </developers>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <blc.version>4.0.0-SNAPSHOT</blc.version>
        <project.uri>${user.dir}</project.uri>
        <broadleaf-common-modules-enterprise.version>2.0.0-SNAPSHOT</broadleaf-common-modules-enterprise.version>
    </properties>
    <!--<scm>
        <connection>scm:git:git@github.com:BroadleafCommerce/blc-punchout2go.git</connection>
        <developerConnection>scm:git:git@github.com:BroadleafCommerce/blc-punchout2go.git</developerConnection>
        <url>https://github.com/BroadleafCommerce/BroadleafCommerce</url>
    </scm>-->

    <licenses>
        <license>
            <name>Broadleaf Commerce Confidential</name>
            <url>http://www.broadleafcommerce.com/license/commercial</url>
            <distribution>repo</distribution>
            <comments>Broadleaf Commerce Commercial License</comments>
        </license>
    </licenses>
    <repositories>
        <repository>
            <id>releases</id>
            <name>public releases</name>
            <url>http://nexus.broadleafcommerce.org/nexus/content/repositories/public/</url>
        </repository>
        <repository>
            <id>snapshots</id>
            <name>public snapshots</name>
            <url>http://nexus.broadleafcommerce.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.0.2</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.zeroturnaround</groupId>
                    <artifactId>jrebel-maven-plugin</artifactId>
                    <version>1.1.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                </plugin>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. trdst-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            org.zeroturnaround
                                        </groupId>
                                        <artifactId>
                                            jrebel-maven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [1.1.5,)
                                        </versionRange>
                                        <goals>
                                            <goal>generate</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <formats>
                        <format>xml</format>
                    </formats>
                    <instrumentation>
                        <excludes>
                        </excludes>
                    </instrumentation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.2.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>1.5</version>
                <configuration>
                    <verbose>false</verbose>
                    <addSvnKeyWords>false</addSvnKeyWords>
                    <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
                    <organizationName>Broadleaf Commerce</organizationName>
                    <inceptionYear>2009</inceptionYear>
                    <licenseName>blc_confidential</licenseName>
                    <licenseResolver>file:${project.uri}/licenses</licenseResolver>
                    <excludes>
                        <exclude>**/*.sql</exclude>
                        <exclude>**/*.html</exclude>
                        <exclude>**/*font-awesome*</exclude>
                        <exclude>**/*jquery*</exclude>
                        <exclude>**/*modernizr*</exclude>
                        <exclude>**/*responsive-tables*</exclude>
                        <exclude>**/spectrum.css</exclude>
                        <exclude>**/spectrum.js</exclude>
                        <exclude>**/redactor.js</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>first</id>
                        <goals>
                            <goal>update-file-header</goal>
                            <goal>update-project-license</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <roots>
                                <root>src/main</root>
                                <root>src/test</root>
                            </roots>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>blc-development</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.zeroturnaround</groupId>
                        <artifactId>jrebel-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>generate-rebel-xml</id>
                                <phase>process-resources</phase>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                -Xmx1024m -XX:MaxPermSize=512m -Xdebug
                                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083
                                -javaagent:${jrebel.path} -Drebel.log.stdout=true
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <keyname>info@broadleafcommerce.org</keyname>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <!--<distributionManagement>
        <snapshotRepository>
            <id>snapshots</id>
            <url>http://nexus.broadleafcommerce.org/nexus/content/repositories/punchout2go-snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>releases</id>
            <url>http://nexus.broadleafcommerce.org/nexus/content/repositories/punchout2go-releases/</url>
        </repository>
    </distributionManagement>-->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
                <configuration>
                    <minmemory>128m</minmemory>
                    <maxmemory>1g</maxmemory>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <dependencies>

        <dependency>
            <groupId>org.broadleafcommerce</groupId>
            <artifactId>broadleaf-third-party-integration-config</artifactId>
            <version>default</version>
            <scope>compile</scope>
            <type>jar</type>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.broadleafcommerce</groupId>
            <artifactId>broadleaf-common</artifactId>
            <version>${blc.version}</version>
            <scope>compile</scope>
            <type>jar</type>
            <optional>true</optional>
        </dependency>
        <dependency>
                <groupId>org.broadleafcommerce</groupId>
                <artifactId>broadleaf-open-admin-platform</artifactId>
                <version>${blc.version}</version>
                <type>jar</type>
                <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>1.4</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.12</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>

    </dependencies>
</project>
